cs duplicate fix